--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>AhmetMX Cloud</title>
+        <title>Ahmetmx Cloud Services</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
