--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <title>XAS - Technology for Humans (OCI)</title>
+        <title>XAS - Technology for Humans (Azure)</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="centered">
-            <img src="logo.gif" alt="XAS - Technology for Humans (OCI)" />
+            <img src="logo.gif" alt="XAS - Technology for Humans (Azure)" />
         </div>
     </body>
 </html>
