--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <div class="centered">
             <img src="logo.gif" alt="XAS - Technology for Humans (Azure)" />
+            <h3>Pronto</h3>
             
         </div>
     </body>
