--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <title>XAS - Technology for Humans (Azure)</title>
+        <title>XAS - Technology for Humans (Azure) -  2025</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="centered">
             <img src="logo.gif" alt="XAS - Technology for Humans (Azure)" />
-            <h3>Pronto</h3>
             
         </div>
     </body>
